# NetExplAIner

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: ci.yml  push_dockerfile.yml
netexplainer/: __main__.py  dataset.py  evaluator.py  llm.py  logger.py  main.py  scraper.py
netexplainer/data/: questions.yaml
netexplainer/questions/: questions.yaml
tests/: conftest.py  test_dataset.py  test_evaluator.py  test_llm.py  test_logger.py  test_scraper.py
