[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NetExplAIner"
version = "0.1.0"
description = "Using LLMs to analyze network traces by decomposing queries in manageable steps."
authors = [
    { name = "Hossam", email = "hossam@correo.ugr.es" }
]
dependencies = ["scapy", "pytest", "langchain"]
requires-python = ">=3.8"
readme = "README.md"
license = { file = "MIT" }

[tool.uv]
